Lexer_Parser/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> expression
Rule 1     expression -> expression PLUS term
Rule 2     expression -> term
Rule 3     term -> term TIMES factor
Rule 4     expression -> expression MINUS term
Rule 5     term -> term DIVIDE factor
Rule 6     term -> factor
Rule 7     factor -> NUMBER
Rule 8     factor -> DOUBLE_VAL
Rule 9     factor -> LPAREN expression RPAREN

Terminals, with rules where they appear

DIVIDE               : 5
DOUBLE_VAL           : 8
LPAREN               : 9
MINUS                : 4
NUMBER               : 7
PLUS                 : 1
RPAREN               : 9
TIMES                : 3
error                : 

Nonterminals, with rules where they appear

expression           : 1 4 9 0
factor               : 3 5 6
term                 : 1 2 3 4 5

Parsing method: LALR

state 0

    (0) S' -> . expression
    (1) expression -> . expression PLUS term
    (2) expression -> . term
    (4) expression -> . expression MINUS term
    (3) term -> . term TIMES factor
    (5) term -> . term DIVIDE factor
    (6) term -> . factor
    (7) factor -> . NUMBER
    (8) factor -> . DOUBLE_VAL
    (9) factor -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 2
    DOUBLE_VAL      shift and go to state 6
    LPAREN          shift and go to state 3

    term                           shift and go to state 1
    expression                     shift and go to state 5
    factor                         shift and go to state 4

state 1

    (2) expression -> term .
    (3) term -> term . TIMES factor
    (5) term -> term . DIVIDE factor

    RPAREN          reduce using rule 2 (expression -> term .)
    PLUS            reduce using rule 2 (expression -> term .)
    MINUS           reduce using rule 2 (expression -> term .)
    $end            reduce using rule 2 (expression -> term .)
    TIMES           shift and go to state 8
    DIVIDE          shift and go to state 7


state 2

    (7) factor -> NUMBER .

    TIMES           reduce using rule 7 (factor -> NUMBER .)
    DIVIDE          reduce using rule 7 (factor -> NUMBER .)
    PLUS            reduce using rule 7 (factor -> NUMBER .)
    MINUS           reduce using rule 7 (factor -> NUMBER .)
    $end            reduce using rule 7 (factor -> NUMBER .)
    RPAREN          reduce using rule 7 (factor -> NUMBER .)


state 3

    (9) factor -> LPAREN . expression RPAREN
    (1) expression -> . expression PLUS term
    (2) expression -> . term
    (4) expression -> . expression MINUS term
    (3) term -> . term TIMES factor
    (5) term -> . term DIVIDE factor
    (6) term -> . factor
    (7) factor -> . NUMBER
    (8) factor -> . DOUBLE_VAL
    (9) factor -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 2
    DOUBLE_VAL      shift and go to state 6
    LPAREN          shift and go to state 3

    term                           shift and go to state 1
    expression                     shift and go to state 9
    factor                         shift and go to state 4

state 4

    (6) term -> factor .

    TIMES           reduce using rule 6 (term -> factor .)
    DIVIDE          reduce using rule 6 (term -> factor .)
    RPAREN          reduce using rule 6 (term -> factor .)
    PLUS            reduce using rule 6 (term -> factor .)
    MINUS           reduce using rule 6 (term -> factor .)
    $end            reduce using rule 6 (term -> factor .)


state 5

    (0) S' -> expression .
    (1) expression -> expression . PLUS term
    (4) expression -> expression . MINUS term

    PLUS            shift and go to state 10
    MINUS           shift and go to state 11


state 6

    (8) factor -> DOUBLE_VAL .

    TIMES           reduce using rule 8 (factor -> DOUBLE_VAL .)
    DIVIDE          reduce using rule 8 (factor -> DOUBLE_VAL .)
    PLUS            reduce using rule 8 (factor -> DOUBLE_VAL .)
    MINUS           reduce using rule 8 (factor -> DOUBLE_VAL .)
    $end            reduce using rule 8 (factor -> DOUBLE_VAL .)
    RPAREN          reduce using rule 8 (factor -> DOUBLE_VAL .)


state 7

    (5) term -> term DIVIDE . factor
    (7) factor -> . NUMBER
    (8) factor -> . DOUBLE_VAL
    (9) factor -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 2
    DOUBLE_VAL      shift and go to state 6
    LPAREN          shift and go to state 3

    factor                         shift and go to state 12

state 8

    (3) term -> term TIMES . factor
    (7) factor -> . NUMBER
    (8) factor -> . DOUBLE_VAL
    (9) factor -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 2
    DOUBLE_VAL      shift and go to state 6
    LPAREN          shift and go to state 3

    factor                         shift and go to state 13

state 9

    (9) factor -> LPAREN expression . RPAREN
    (1) expression -> expression . PLUS term
    (4) expression -> expression . MINUS term

    RPAREN          shift and go to state 14
    PLUS            shift and go to state 10
    MINUS           shift and go to state 11


state 10

    (1) expression -> expression PLUS . term
    (3) term -> . term TIMES factor
    (5) term -> . term DIVIDE factor
    (6) term -> . factor
    (7) factor -> . NUMBER
    (8) factor -> . DOUBLE_VAL
    (9) factor -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 2
    DOUBLE_VAL      shift and go to state 6
    LPAREN          shift and go to state 3

    term                           shift and go to state 15
    factor                         shift and go to state 4

state 11

    (4) expression -> expression MINUS . term
    (3) term -> . term TIMES factor
    (5) term -> . term DIVIDE factor
    (6) term -> . factor
    (7) factor -> . NUMBER
    (8) factor -> . DOUBLE_VAL
    (9) factor -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 2
    DOUBLE_VAL      shift and go to state 6
    LPAREN          shift and go to state 3

    term                           shift and go to state 16
    factor                         shift and go to state 4

state 12

    (5) term -> term DIVIDE factor .

    TIMES           reduce using rule 5 (term -> term DIVIDE factor .)
    DIVIDE          reduce using rule 5 (term -> term DIVIDE factor .)
    RPAREN          reduce using rule 5 (term -> term DIVIDE factor .)
    PLUS            reduce using rule 5 (term -> term DIVIDE factor .)
    MINUS           reduce using rule 5 (term -> term DIVIDE factor .)
    $end            reduce using rule 5 (term -> term DIVIDE factor .)


state 13

    (3) term -> term TIMES factor .

    TIMES           reduce using rule 3 (term -> term TIMES factor .)
    DIVIDE          reduce using rule 3 (term -> term TIMES factor .)
    RPAREN          reduce using rule 3 (term -> term TIMES factor .)
    PLUS            reduce using rule 3 (term -> term TIMES factor .)
    MINUS           reduce using rule 3 (term -> term TIMES factor .)
    $end            reduce using rule 3 (term -> term TIMES factor .)


state 14

    (9) factor -> LPAREN expression RPAREN .

    TIMES           reduce using rule 9 (factor -> LPAREN expression RPAREN .)
    DIVIDE          reduce using rule 9 (factor -> LPAREN expression RPAREN .)
    PLUS            reduce using rule 9 (factor -> LPAREN expression RPAREN .)
    MINUS           reduce using rule 9 (factor -> LPAREN expression RPAREN .)
    $end            reduce using rule 9 (factor -> LPAREN expression RPAREN .)
    RPAREN          reduce using rule 9 (factor -> LPAREN expression RPAREN .)


state 15

    (1) expression -> expression PLUS term .
    (3) term -> term . TIMES factor
    (5) term -> term . DIVIDE factor

    RPAREN          reduce using rule 1 (expression -> expression PLUS term .)
    PLUS            reduce using rule 1 (expression -> expression PLUS term .)
    MINUS           reduce using rule 1 (expression -> expression PLUS term .)
    $end            reduce using rule 1 (expression -> expression PLUS term .)
    TIMES           shift and go to state 8
    DIVIDE          shift and go to state 7


state 16

    (4) expression -> expression MINUS term .
    (3) term -> term . TIMES factor
    (5) term -> term . DIVIDE factor

    RPAREN          reduce using rule 4 (expression -> expression MINUS term .)
    PLUS            reduce using rule 4 (expression -> expression MINUS term .)
    MINUS           reduce using rule 4 (expression -> expression MINUS term .)
    $end            reduce using rule 4 (expression -> expression MINUS term .)
    TIMES           shift and go to state 8
    DIVIDE          shift and go to state 7

